# X-LINUX-NFC5

./: README.md
Linux_RFAL_st25r3911_v2.2.0/: readme_cross_compilation.txt
Linux_RFAL_st25r3911_v2.2.0/linux_demo/: CMakeLists.txt
Linux_RFAL_st25r3911_v2.2.0/linux_demo/nfc_poller/Src/: exampleRfalPoller.c  main.c
Linux_RFAL_st25r3911_v2.2.0/linux_demo/platform/: platform (1).h  platform.old
Linux_RFAL_st25r3911_v2.2.0/linux_demo/platform/Inc/st25r3911/: platform.h
Linux_RFAL_st25r3911_v2.2.0/linux_demo/platform/Src/: pltf_gpio.old1
debian/: changelog  control  files  install  rules
